@@ -14,11 +14,11 @@ import org.w3c.dom.Text;
 
 /**
  * @author Anthony Eden
+ * @version $Id: XMLUtilities.java,v 1.8 2007/02/25 00:37:39 x-mago Exp $
  */
 public class XMLUtilities {
 
     private XMLUtilities() {
-
     }
 
     public static Collection getChildElements(Node node) {
@@ -71,24 +71,24 @@ public class XMLUtilities {
     public static String getChildValue(Element element, String name) {
         return getValue(getChild(element, name));
     }
-    
+
     public static int getIntAttribute(Element el, String name) {
-    	String s = el.getAttribute(name);
-    	if (s != null || s.length() > 0) {
-    		return Integer.parseInt(s);
-    	}
-    	return 0;
+        String s = el.getAttribute(name);
+        if (s != null || s.length() > 0) {
+            return Integer.parseInt(s);
+        }
+        return 0;
     }
-    
+
     public static boolean getBooleanAttribute(Element el, String name) {
-    	String s = el.getAttribute(name);
-    	if (s == null || "0".equals(s)) {
-    		return false;
-    	}
-    	if ("1".equals(s)) {
-    		return true;
-    	}
-    	return Boolean.valueOf(s);
+        String s = el.getAttribute(name);
+        if (s == null || "0".equals(s)) {
+            return false;
+        }
+        if ("1".equals(s)) {
+            return true;
+        }
+        return new Boolean(s).booleanValue();
     }
 
 
